fixed spacing for sharing in ie7

--- a/styles/main.less
+++ b/styles/main.less
@@ -610,6 +610,9 @@ body {
 
 .lt-ie8 .populr-webicon { margin-bottom: 5px; }
 
+.lt-ie8 #pop-sharing > a {margin-top: 5px;}
+.lt-ie8 #pop-sharing > a:first-child {margin-top: 0;}
+
 #populr > #image-slider-themes > .basic(@arrow-color: @off-white, @bg-color: @custom-color);
 
 
